--- a/macOS_Monterey/EFI/OC/config.plist
+++ b/macOS_Monterey/EFI/OC/config.plist
@@ -343,7 +343,7 @@
 				<key>hda-idle-support</key>
 				<string>1</string>
 				<key>layout-id</key>
-				<data>HgAAAA==</data>
+				<integer>14</integer>
 			</dict>
 			<key>PciRoot(0x0)/Pci(0x2,0x0)</key>
 			<dict>
