--- a/macOS_Monterey/EFI/OC/config.plist
+++ b/macOS_Monterey/EFI/OC/config.plist
@@ -1008,7 +1008,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>-v keepsyms=1 debug=0x100 -wegnoegpu -igfxblr</string>
+				<string>keepsyms=1 debug=0x100 -wegnoegpu -igfxblr</string>
 				<key>run-efi-updater</key>
 				<string>No</string>
 				<key>csr-active-config</key>
